2011-11-27	Sebastien Bourdeauducq <seb@tmplab.org>

	PR 1972/bsps
	* milkymist_video/milkymist_video.h, milkymist_video/video.c: Adds an
	ioctl to implement selection of composite on any connector, S-Video
	and Component sources on the Milkymist One.

2011-11-27	Sebastien Bourdeauducq <seb@tmplab.org>

	PR 1970/bsps
	* milkymist_clock/ckinit.c, milkymist_console/console.c,
	milkymist_console/uart.c, milkymist_timer/timer.c: Support for the
	new Milkymist sysctl and clock frequency detection.

2011-11-27	Sebastien Bourdeauducq <seb@tmplab.org>

	PR 1966/bsps
	* milkymist_console/console.c, milkymist_console/uart.c,
	milkymist_console/uart.h, milkymist_midi/midi.c: support for the new
	UART core and interrupt map

2011-08-02	Sebastien Bourdeauducq <sebastien.bourdeauducq@gmail.com>

	PR 1869/bsps
	* milkymist_networking/mm_crc32.c: Removed.

2011-08-01	Sebastien Bourdeauducq <sebastien.bourdeauducq@gmail.com>

	PR 1869/bsps
	* startup/bspclean.c: New file.
	* include/tm27.h: Removed.
	* ChangeLog, Makefile.am, README, preinstall.am, include/bsp.h,
	include/system_conf.h, make/custom/milkymist.cfg, startup/linkcmds:
	Complete BSP for Milkymist One supporting Milkymist SOC 1.0.x.
	Includes new or updated drivers for:
	  - Multi-standard video input (PAL/SECAM/NTSC)
	  - Two DMX512 (RS485) ports
	  - MIDI IN and MIDI OUT ports
	  - VGA output
	  - AC'97 audio
	  - NOR flash
	  - 10/100 Ethernet
	  - Memory card (experimental and incomplete)
	  - USB host connectors (input devices only)
	  - RC5 infrared receiver
	  - RS232 debug port
